fix slides and overlap;closes #1

--- a/style.css
+++ b/style.css
@@ -3,20 +3,26 @@
 */
 
 /*pagewide styles*/
+
+@keyframes fade {
+	0% {opacity: 0;}
+	10% {opacity: 1;}
+	20% {opacity: 1;}
+	30% {opacity: 1;}
+	40% {opacity: 0;}
+	50% {opacity: 0;}
+	100% {opacity: 0;}
+}
 body {
 	margin: 0px;
 	padding: 0px;
 }
+
 .spacer {
 	float: left;
 	width:100%;
 	height: 30px;
 }
-.title,.description {
-	text-align: center;
-	padding: 0 20px 0 20px;
-}
-
 
 @media screen and (max-width: 550px){
 	/*mobile phones*/
@@ -41,9 +47,11 @@ body {
 	/*tablets*/
 	.title,.description {
 		display: block;
+		float: left;
+		width: 100%;
 	}
 
-	.slideshow {
+	.slideshow,h3 {
 		display: none;
 	}
 
@@ -71,15 +79,6 @@ body {
 
 @media screen and (min-width: 769px) {
 	/*laptop and up*/
-	@keyframes fade {
-		0% { opacity: 0; }
-		5% { opacity: 1; }
-		20% { opacity: 1; }
-		40% { opacity: 1; }
-		60% { opacity: 1; }
-		80% { opacity: 0; }
-		100% { opacity: 0; }
-	}
 
 	.title,.description {
 		display: block;
@@ -90,30 +89,40 @@ body {
 		display: none;
 	}
 
+	.slideshow {
+		display: block;
+		float: left;
+		width: 100%;
+	}
+
 	.slideshow img {
 		width: 100%;
 		height: 100%;
 		opacity: 0;
 		animation-name: fade;
-		animation-duration: 40s;
+		animation-duration: 10s;
 		animation-iteration-count: infinite;
-		position: absolute;
 		left: 0;
 		right: 0;
+		position: absolute;
 	}
+
+	h3 {
+		margin-top: 700px;
+	}
+
 
 	.slideshow img:nth-child(1) {
 		animation-delay: 0s;
 	}	
 	.slideshow img:nth-child(2) {
-		animation-delay: 10s;
+		animation-delay: 2.5s;
 	}	
 	.slideshow img:nth-child(3) {
-		animation-delay: 20s;
+		animation-delay: 5s;
 	}	
 	.slideshow img:nth-child(4) {
-		animation-delay: 30s;
+		animation-delay: 7.5s;
 	}
-
 }
 
